--- a/metro/src/styles.css
+++ b/metro/src/styles.css
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+div.sm-jumbotron{
+    margin: 0px;
+    padding: 2rem;
+    background-color:black;
+    color: #fff;
+}
+ 
+button.btn-submit{
+    background-color:black;
+    color: #fff;
+    width: 100%;
+}
+button.btn-submit:focus,button.btn-submit:hover{
+    background-color: #38547b;
+}
+
+input.ng-invalid.ng-dirty{
+    border-bottom-color : red !important;
+    box-shadow : red !important;
+}
