--- a/metrotrack/src/app/login/login.component.html
+++ b/metrotrack/src/app/login/login.component.html
@@ -1,3 +1,44 @@
-<p>
-  login works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 login-sec">
+            <h2 class="text-center">Login Now</h2>
+
+       <form class="login-form">
+ <div class="form-group">
+   <label for="exampleInputEmail1" class="text-uppercase">Username</label>
+   <input type="email" class="form-control" placeholder="Enter Username">
+ </div>
+
+ <div class="form-group">
+   <label for="exampleInputPassword1" class="text-uppercase">Password</label>
+   <input type="password" class="form-control" placeholder="Password">
+ </div>
+
+ <div class="form-check">
+   <label class="form-check-label">
+     <input type="checkbox" class="form-check-input">
+     <small>Remember Me</small>
+   </label>
+   <button type="submit" class="btn btn-login float-right">Submit</button>
+ </div>
+       </form>
+       </div>
+
+        <div class="col-md-8 banner-sec">
+     <div class="carousel-caption d-none d-md-block">
+       <div class="banner-text">
+
+           <h2>
+             Metro Track
+           </h2>
+
+           <p>
+             An app to help keep track of metrocard balances as well as when a monthly or weekly will expire.
+           </p>
+
+       </div>
+     </div>
+   </div>
+ </div>
+</div>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
