added route to home page

--- a/metrotrack/src/app/login/login.component.html
+++ b/metrotrack/src/app/login/login.component.html
@@ -19,7 +19,8 @@
      <input type="checkbox" class="form-check-input">
      <small>Remember Me</small>
    </label>
-   <button type="submit" class="btn btn-login float-right">Submit</button>
+   <button type="submit"(click)="onSubmit()" class="btn btn-login float-right">Submit
+  </button>
  </div>
        </form>
        </div>
