--- a/metrotrack/src/styles.css
+++ b/metrotrack/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+section{
+    background: #DE6262;
+    background: linear-gradient(to bottom, #edb946, #0075d6);
+    height:100vH;
+    padding: 60px 0;
+}
