--- a/metrotrack/src/app/register/register.component.html
+++ b/metrotrack/src/app/register/register.component.html
@@ -8,18 +8,25 @@
     </div>
 		<div class="col-md-4 login-sec">
 		    <h2 class="text-center">Register Now</h2>
-	<form>
+	
+			<!-- <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
+				<input name="first" ngModel required #first="ngModel">
+				<input name="last" ngModel>
+				<button>Submit</button>
+			  </form> -->
+
+		<form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
 	<div class="form-group input-group">
 		<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
 		 </div>
-        <input name="" class="form-control" placeholder="Full name" type="text">
+        <input name="fullname" ngModel class="form-control" placeholder="Full name" type="text">
     </div>
     <div class="form-group input-group">
     	<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
 		 </div>
-        <input name="" class="form-control" placeholder="Email address" type="email">
+        <input name="email" ngModel class="form-control" placeholder="Email address" type="email">
     </div>
     <div class="form-group input-group">
     	<div class="input-group-prepend">
@@ -31,7 +38,7 @@
 		    <option value="2">+646</option>
 		    <option value="3">+929</option>
 		</select>
-    	<input name="" class="form-control" placeholder="Phone number" type="text">
+    	<input name="number" ngModel class="form-control" placeholder="Phone number" type="text">
     </div>
 
     <div class="form-group input-group">
