--- a/metrotrack/src/app/register/register.component.html
+++ b/metrotrack/src/app/register/register.component.html
@@ -13,13 +13,13 @@
 		<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-user"></i> </span>
 		 </div>
-        <input name="" class="form-control" placeholder="Full name" type="text">
+        <input name="fullname" class="form-control" placeholder="Full name" type="text">
     </div>
     <div class="form-group input-group">
     	<div class="input-group-prepend">
 		    <span class="input-group-text"> <i class="fa fa-envelope"></i> </span>
 		 </div>
-        <input name="" class="form-control" placeholder="Email address" type="email">
+        <input name="email" class="form-control" placeholder="Email address" type="email">
     </div>
     <div class="form-group input-group">
     	<div class="input-group-prepend">
@@ -31,7 +31,7 @@
 		    <option value="2">+646</option>
 		    <option value="3">+929</option>
 		</select>
-    	<input name="" class="form-control" placeholder="Phone number" type="text">
+    	<input name="phonenumber" class="form-control" placeholder="Phone number" type="text">
     </div>
 
     <div class="form-group input-group">
