--- a/metrotrack/src/app/home/home.component.css
+++ b/metrotrack/src/app/home/home.component.css
@@ -1,43 +1,127 @@
-.banner-sec{
-    background-image: linear-gradient(to top, #fddb92 0%, #d1fdff 100%);
-    background-size:cover;
-    width:100%;
-    position:absolute;
-    height:100%;
+section{
+    background: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);
+    height:100vH;
+    padding: 60px 0;
 }
-.symbol-add{
-    color: black;
-    size:80px;
+#wrapper {
+  padding-left: 250px;
+  transition: all 0.4s ease 0s;
 }
-.symbol-profile{
-    color: black;
-    size:80px;
-}
-   
-   
-   .banner-text{
-    width:100%;
-    position:relative;
-    bottom:300px;
-   }
-   
-   .banner-text h2{
-    color:#fff;
-    font-weight:600;
-   }
-   
-   .banner-text h2:after{
-    content:" ";
-    width:100%;
-    height:5px;
-    background:#FFF;
-    display:block;
-    margin-top:20px;
-    border-radius:3px;
-   }
-   
-   .banner-text p{
-    color:#FFF;
-   }
 
-   
+#sidebar-wrapper {
+  margin-left: -250px;
+  top: 51px;
+  left: 250px;
+  width: 250px;
+  background: #000;
+  position: fixed;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1000;
+  transition: all 0.4s ease 0s;
+}
+
+#wrapper.active {
+  padding-left: 0;
+}
+
+#wrapper.active #sidebar-wrapper {
+  left: 0;
+}
+
+#page-content-wrapper {
+  width: 100%;
+  padding-top: 70px;
+  transition: all 0.4s ease 0s;
+}
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.sidebar-nav li {
+  line-height: 40px;
+  text-indent: 20px;
+}
+
+.sidebar-nav li a {
+  color: #999999;
+  display: block;
+  text-decoration: none;
+  padding-left: 60px;
+}
+
+.sidebar-nav li a span:before {
+  position: absolute;
+  left: 0;
+  color: #41484c;
+  text-align: center;
+  width: 20px;
+  line-height: 18px;
+}
+
+.sidebar-nav li a:hover,
+.sidebar-nav li.active {
+  color: #fff;
+  background: rgba(255,255,255,0.2);
+  text-decoration: none;
+}
+
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+  text-decoration: none;
+}
+
+.sidebar-nav > .sidebar-brand {
+  height: 65px;
+  line-height: 60px;
+  font-size: 18px;
+}
+
+.sidebar-nav > .sidebar-brand a {
+  color: #999999;
+}
+
+.sidebar-nav > .sidebar-brand a:hover {
+  color: #fff;
+  background: none;
+}
+
+#menu-toggle {
+    text-decoration: none;
+    float: left;
+    color: #fff;
+    padding-right: 15px;
+}
+
+@media (max-width:767px) {
+
+#wrapper {
+  padding-left: 0;
+}
+
+#sidebar-wrapper {
+  left: 0;
+}
+
+#wrapper.active {
+  position: relative;
+  left: 250px;
+}
+
+#wrapper.active #sidebar-wrapper {
+  left: 250px;
+  width: 250px;
+  transition: all 0.4s ease 0s;
+}
+
+#menu-toggle {
+  display: inline-block;
+}
+
+}
