--- a/metrotrack/src/app/register/register.component.css
+++ b/metrotrack/src/app/register/register.component.css
@@ -1,7 +1,5 @@
-
 section{
-    background: #DE6262;
-    background: linear-gradient(to bottom, #edb946, #0075d6);
+    background: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);
     height:100vH;
     padding: 60px 0;
 }
